src/objects/Employee__c.object
<CustomObject>
    <description>This is child object  of Project Details containing info about employee</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Defines Address of an employee</description>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Defines Age of an employee</description>
        <formula>YEAR( TODAY() )  -  YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please enter the age.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certification_Done__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Certification Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Company name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_joining__c</fullName>
        <label>Date of joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Sc.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <description>Field for Experience of first company</description>
        <label>Experience</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <description>Mandatory</description>
        <label>First name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_name__c</fullName>
        <formula>First_name__c  &amp;  Last_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_on_notice_period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is on notice period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_working_day__c</fullName>
        <description>Calculate last working day</description>
        <formula>Resignation_date__c  + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last working day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Company__c</fullName>
        <label>Previous Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resignation_date__c</fullName>
        <label>Resignation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role_of_employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is field referring to parent role</description>
        <label>Role of employee</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Social security number</description>
        <label>SSN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary__c.Credited_to__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills_Expertise__c</fullName>
        <description>This is picklist for technical skill</description>
        <label>Skills/Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
  Is_active__c == TRUE  ,
    
  IF( 
      Is_on_notice_period__c == TRUE, 
      IMAGE( &quot;/img/samples/flag_yellow.gif&quot;,&quot;Employee is currently on notice period.&quot;)  , 
      IMAGE( &quot;/img/samples/flag_green.gif&quot;,&quot;Employee is active.&quot; ) 
    ),
    IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;Employee is currently inactive.&quot;)  
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Mandatory</description>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>Employee_who_are_on_Notice_Period</fullName>
        <columns>NAME</columns>
        <columns>Date_of_joining__c</columns>
        <columns>First_name__c</columns>
        <columns>Is_on_notice_period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_on_notice_period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Employee who are on Notice Period</label>
        <sharedTo>
            <role>HR_manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Employee</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Date_of_joining__c</columns>
        <columns>First_name__c</columns>
        <columns>Is_active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Employee</label>
        <sharedTo>
            <role>HR_manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <recordTypes>
        <fullName>Experience</fullName>
        <active>true</active>
        <description>Record type for Experience</description>
        <label>Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <description>Record type for fresher</description>
        <label>Fresher</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <description>This is record type for Non technical</description>
        <label>Non Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <description>This is record type for technica</description>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Age_validation</fullName>
        <active>true</active>
        <description>validates age between 21-30</description>
        <errorConditionFormula>Age__c   &lt; 21 || Age__c  &gt;31</errorConditionFormula>
        <errorMessage>Age should be in between 21-30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notice_period</fullName>
        <active>true</active>
        <description>Checking notice period</description>
        <errorConditionFormula>IF( Is_on_notice_period__c  = TRUE,
       ISNULL( Resignation_date__c ),
       NOT (ISNULL(Resignation_date__c)  )
    )</errorConditionFormula>
        <errorMessage>Please check the resignation date and notice period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_limit_upto_10</fullName>
        <active>true</active>
        <description>Limit size upto 10 to SSN</description>
        <errorConditionFormula>SSN__c &lt; 10</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN should be less than 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Date_of_resignation</fullName>
        <active>true</active>
        <description>Check validation of resignation</description>
        <errorConditionFormula>Resignation_date__c &lt;  Date_of_joining__c</errorConditionFormula>
        <errorMessage>Enter date greater than Joining date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_of_DOB</fullName>
        <active>true</active>
        <errorConditionFormula>TODAY()  -  Date_of_Birth__c  &lt; 18</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Please provide a valid Date of birth. Employee cannot be less than 18 years of Age.</errorMessage>
    </validationRules>
</CustomObject>